# Portfolio

C++/cis_project/: main.cpp
C++/cis_project/db/: database.sql
C++/cis_project/src/: mainwindow.cpp  mainwindow.h  search.cpp  search.h
C++/cube-can-sat-2016/soft/embedded/checki2c/: CMakeLists.txt
C++/cube-can-sat-2016/soft/embedded/cpu/: CMakeLists.txt  JetBrains.gitignore  platformio.ini
C++/cube-can-sat-2016/soft/embedded/payload/: CMakeLists.txt  Makefile  avrdude.conf
C++/cube-can-sat-2016/soft/embedded/power/: CMakeLists.txt  Makefile  platformio.ini
C++/graph-editor/: CMakeLists.txt
C++/graph-editor/src/: main.cpp
C++/graph-editor/src/app/: editorwindow.cpp  editorwindow.h  launcher.cpp  launcher.h
C++/graph-editor/src/app/project/: project.cpp  project.h  serialization.cpp  serialization.h
C++/graph-editor/src/app/widgets/: graphs.cpp  graphs.h  lineparameters.cpp  lineparameters.h
JS/Part1/ex1/: script.js
JS/Part1/ex2/: script.js
JS/Part1/ex3/: script.js
JS/Part1/ex4/: script.js
JS/Part1/ex6/js/: main.js
JS/Part1/ex7/js/: main.js
JS/Part1/hometask5/js/: script.js
JS/Part2/ex2/js/: script.js
JS/Part2/ex3/css/: style.css
JS/Part2/ex3/js/: script.js
JS/Part2/ex4/js/: script.js
JS/Part2/ex5/js/: script.js
JS/Part2/ex6/js/: script.js
JS/Part2/ex7/js/: script.js
JS/Part3/: index.html
JS/Part3/src/: script.js
Python/bis_project2/: main.py
Python/bis_project2/src/: Matrix.py
Python/cube-can-sat-2016/soft/desktop/: run.sh  run.sh~
Python/test_staffdb/staffcatalog/: views.py
(+79 files in other folders)
